fixed gradle files

--- a/MVCDogSitting/.settings/org.eclipse.wst.common.component
+++ b/MVCDogSitting/.settings/org.eclipse.wst.common.component
@@ -4,5 +4,8 @@
 		<property name="context-root" value="MVCDogSitting"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="src"/>
 		<wb-resource deploy-path="/" source-path="WebContent"/>
+		<dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/JPADogSitting/JPADogSitting">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
 	</wb-module>
 </project-modules>
