--- a/MVCDogSitting/.settings/org.eclipse.wst.common.component
+++ b/MVCDogSitting/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="2.0">
 	<wb-module deploy-name="MVCDogSitting">
 		<property name="context-root" value="MVCDogSitting"/>
+		<wb-resource deploy-path="/WEB-INF/classes" source-path="src"/>
 		<wb-resource deploy-path="/" source-path="WebContent"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
 		<dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/JPADogSitting/JPADogSitting">
 			<dependency-type>uses</dependency-type>
 		</dependent-module>
