--- a/MVCDogSitting/WebContent/master.css
+++ b/MVCDogSitting/WebContent/master.css
@@ -1,18 +1,3 @@
-
-
-section {
-  padding: 0 30px;
-  margin-bottom: 60px;
-}
-
-p[error] {
-  color: red;
-}
-
-p[success] {
-  color: green;
-}
-
 .col,
 .item {
   padding: 10px;
@@ -24,51 +9,13 @@ p[success] {
   background-color: rgba(0, 0, 0, 0.14);
 }
 
-input[type="checkbox"]:not(:checked) ~ .row .col:nth-child(n+4),
-input[type="checkbox"]:not(:checked) ~ .row .item:nth-child(n+4) {
-  display: none;
-}
-
-.floating-row:before, .floating-row:after {
-  display: table;
-  content: '';
-  clear: both;
-}
-.floating-row .col {
-  width: 33.33%;
-  float: left;
+a:hover{
+	color: purple;
+	font-weight: bold;
+	text-decoration: none;
 }
 
 .grid-row {
   display: grid;
   grid-auto-flow: column;
-}
-
-.flex-row {
-  display: flex;
-}
-.flex-row .col {
-  flex-grow: 1;
-}
-
-.column-row {
-  column-count: 3;
-  column-gap: 0;
-}
-
-.inline-block-row {
-  font-size: 0;
-}
-.inline-block-row .col {
-  display: inline-block;
-  width: 33.33%;
-  font-size: initial;
-}
-
-.table-row {
-  display: table;
-  width: 100%;
-}
-.table-row .col {
-  display: table-cell;
 }
