--- a/MVCDogSitting/WebContent/master.css
+++ b/MVCDogSitting/WebContent/master.css
@@ -3,11 +3,15 @@
   padding: 10px;
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.07);
+  text-align: center;
+  font-weight: 900;
+  
 }
 .col:nth-child(2n),
 .item:nth-child(2n) {
   background-color: rgba(0, 0, 0, 0.14);
 }
+
 
 a:hover{
 	color: purple;
