--- a/MVCDogSitting/WebContent/master.css
+++ b/MVCDogSitting/WebContent/master.css
@@ -26,6 +26,29 @@
  
     margin:auto;  /* centers the button */
 }
+.sad {
+	height: 4em;
+    width: 5em;
+    position: absolute;
+    margin-top: -3em;
+    margin-left: 4em;
+    
+   
+}
+
+.button .sad { 
+	display: block;
+    position: absolute;
+    bottom: 0;
+    /* left: 367px;
+    height: 55%;
+    -webkit-transition: bottom 1s ease-out;
+    -moz-transition: bottom 1s ease-out;
+    -o-transition: bottom 1s ease-out;
+    -ms-transition: bottom 1s ease-out; */
+    transition: bottom 1s ease-out;
+	
+}
 
 .navbar {
 	background: #4E9CAF;
