--- a/MVCDogSitting/WebContent/rating.css
+++ b/MVCDogSitting/WebContent/rating.css
@@ -1,4 +1,5 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+@import "lesshat";
 
 fieldset, label { margin: 0; padding: 0; }
 body{ margin: 20px; }
@@ -40,3 +41,21 @@ h1 { font-size: 1.5em; margin: 10px; }
 .rating > input:checked ~ label:hover,
 .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
 .rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 
+
+.rating-box {
+ background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+ font-size: 0;
+ height: 50px;
+ line-height: 0;
+ overflow: hidden;
+ text-indent: -999em;
+ width: 70px;
+}
+
+.rating-box .rating {
+ background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+ background-position: 0 100%;
+ float: left;
+ height: 50px;
+}
+
