--- a/MVCDogSitting/WebContent/rating.css
+++ b/MVCDogSitting/WebContent/rating.css
@@ -50,6 +50,7 @@ h1 { font-size: 1.5em; margin: 10px; }
   width: 100px;
   margin-left: 0;
   position: relative;
+  display:inline-block;
   padding: 0;
   text-shadow: 0px 1px 0 #a2a2a2;
 }
@@ -71,5 +72,8 @@ h1 { font-size: 1.5em; margin: 10px; }
   }
 }
 
-
+#sitRateTable table {
+	width:100%;
+	table-layout: fixed;
+}
 
