--- a/MVCDogSitting/WebContent/master.css
+++ b/MVCDogSitting/WebContent/master.css
@@ -5,6 +5,8 @@
 /*   background-color: #4E9CAF; */
   text-align: center;
   font-weight: 900;
+  position: relative;
+  overflow: hidden;
   
 }
 .col:nth-child(2n),
@@ -30,26 +32,18 @@
 	height: 4em;
     width: 5em;
     position: absolute;
-    margin-top: -3em;
-    margin-left: 4em;
-    
-   
+    top: 100px;
+    right: 10px;
+    transition: top 0.2s ease-out;
 }
 
-.button .sad { 
-	display: block;
-    position: absolute;
-    bottom: 0;
-    /* left: 367px;
-    height: 55%;
-    -webkit-transition: bottom 1s ease-out;
-    -moz-transition: bottom 1s ease-out;
-    -o-transition: bottom 1s ease-out;
-    -ms-transition: bottom 1s ease-out; */
-    transition: bottom 1s ease-out;
-	
-}
+.buttonlogout:hover ~ .sad {
+	top: 10px;
+}	
 
+logerror {
+	color: red;
+}
 
 .navbar {
 	background: #4E9CAF;
