background image no repeat

--- a/MVCDogSitting/WebContent/master.css
+++ b/MVCDogSitting/WebContent/master.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("https://images.alphacoders.com/288/288213.jpg");
-    background-size: 75em;
+    background-size: 80em;
+    background-repeat: no-repeat;
     margin: 0px;
     padding: 0px;
     height: 100%;
