--- a/MVCDogSitting/WebContent/master.css
+++ b/MVCDogSitting/WebContent/master.css
@@ -1,12 +1,19 @@
+html,
+body {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+
 body {
     background-image: url("https://images.alphacoders.com/288/288213.jpg");
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     margin: 20px;
     padding: 0px;
     height: 100%;
     width: 100%;
-
 }
 .sitterlist {
 	    background-color: white;
@@ -20,8 +27,8 @@ body {
 height: 1.75em;
     width: 1.75em;
     position: absolute;
-    margin-left: -7.49em;
-    margin-top: 0.5em;
+   left: 7.5em;
+   top: 1em;
 }
 .dogpic {
 	border-radius: 8%;
@@ -91,20 +98,16 @@ logerror {
 }
 
 .navbar {
-    margin-top: -1em;
 	background: #a2a37a;
 	opacity: 0.7;
-	/* margin-left: -2em;
-	margin-right: -2em; */
 	display:block;
 	border-bottom: 1px solid black;
 	top:0;
+	left: 0;
 	padding:0;
 	position: fixed;
 	margin: 0 px;
-	width: 100%;
-	margin-left: -1.25em;
-	
+	width: 100%;	
 }
 a {
 font-family: 'Permanent Marker', cursive;
